# Lab_Planner

./: README.md  pyproject.toml  run_tests.sh
lab_planner/: main.py
lab_planner/data/: example.json  example_2.json  example_3.json  example_inter.json
lab_planner/models/: equipment.py  metrics.py  sample.py  scheduler.py  technician.py
lab_planner/planner/: planify_lab.py  utils.py
tests/: test_basic_sheduling.py  test_lunch_breaks.py  test_maintenance.py  test_parallel_execution.py  test_planify_lab.py  test_priority_respect.py  test_specialization_matching.py  test_utils.py
